# uc-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  PROJECT_CHARTER.md  README.md  buf.gen.yaml  justfile  release-please-config.json  rust-toolchain.toml
.context/: README.md  manifest.yaml
.context/architecture/: edge-capability-and-data-matrix.md
.context/decisions/: ADR-0001-repository-context-system.md  ADR-0002-monorepo-modular-monolith.md  ADR-0003-coordinated-release-please.md  ADR-0004-mandatory-context-freshness.md  ADR-0005-single-application-core.md  ADR-0006-forward-only-database-migrations.md  ADR-0007-replaceable-infrastructure-adapters.md  ADR-0008-test-driven-development-and-complete-coverage.md  ADR-0009-documentation-and-executable-payload-examples.md  ADR-0010-self-provisioned-ephemeral-test-environments.md  ADR-0011-failure-engineering-and-agent-ready-diagnostics.md  ADR-0012-evidence-driven-performance-engineering.md  ADR-0013-oidc-authentication-and-zanzibar-authorization.md  ADR-0014-uc-bok-reference-implementation-loop.md  ADR-0015-offline-capable-distributed-retail-runtime.md  ADR-0016-edge-fleet-control-plane.md  ADR-0017-selective-ci-execution.md  ADR-0018-planes-consistency-and-cost-efficiency.md  ADR-0019-economics-by-design-integration.md  ADR-0020-yukh-shadow-governance-migration.md  ADR-0021-operation-first-architecture.md  ADR-0022-architecture-knowledge-record-model.md  ADR-0023-record-lifecycle-and-knowledge-validity.md  ADR-0024-governed-capability-realization.md  ADR-0025-runtime-lifecycle-configuration-and-composition.md  ADR-0026-observability-health-errors-and-economic-correlation.md  ADR-0027-scheduled-background-and-worker-execution.md  ADR-0028-transport-neutral-adapter-execution.md  ADR-0029-extension-registration-boundaries.md  ADR-0030-risk-based-coverage-gates.md  ADR-0030-uc-bok-reference-implementation-contract.md  ADR-0031-market-evidence-disposition-and-scope-control.md  ADR-0032-risk-based-coverage-gates.md  ADR-0033-generated-grpc-gateway-rest-adapter.md
.context/handoffs/: HANDOFF-2026-07-18-01.md  HANDOFF-2026-07-18-uc-rust-1.0-planning.md
.context/quality-attributes/: enforcement-roadmap.md  system-quality-model.md
.context/research/: 2025-market-guide-impact-assessment.md
.context/rfcs/: RFC-0001-agentic-operating-system.md  RFC-0001-runtime-foundation.md  RFC-0002-runtime-foundation.md
.context/sessions/: SESSION-2026-07-18-01-project-inception.md  SESSION-2026-07-18-02-governance-invariants.md  SESSION-2026-07-18-03-replaceable-infrastructure.md  SESSION-2026-07-18-04-testing-documentation-fixtures.md  SESSION-2026-07-18-05-self-provisioned-test-environments.md  SESSION-2026-07-18-06-reliability-performance.md  SESSION-2026-07-18-07-complete-quality-model-auth.md  SESSION-2026-07-18-08-uc-bok-reference-implementation.md  SESSION-2026-07-18-09-edge-runtime-and-fleet-control.md  SESSION-2026-07-18-10-edge-governance-alignment.md  SESSION-2026-07-18-11-market-guide-and-enforcement-roadmap.md  SESSION-2026-07-18-12-first-enforcement-slice.md  SESSION-2026-07-18-13-selective-ci-and-architecture-gate.md  SESSION-2026-07-18-14-persistence-contract-adapters.md  SESSION-2026-07-18-15-durable-sync-restart-and-conflicts.md  SESSION-2026-07-18-15-quick-verification-and-sync-harness.md  SESSION-2026-07-18-16-planes-consistency-and-cost-efficiency.md  SESSION-2026-07-18-17-ebd-economic-foundation.md  SESSION-2026-07-18-20-uc-rust-1.0-blueprint.md  (+7 more)
.github/: copilot-instructions.md
.yukh/: project.yaml
apps/uc-cli/: Cargo.toml
apps/uc-cli/src/: main.rs
config/: runtime.toml
crates/uc-adapters/: Cargo.toml  build.rs
crates/uc-adapters/src/: lib.rs
crates/uc-adapters/tests/: live_grpc_conformance.rs  live_rest_conformance.rs  tracing_hierarchy.rs
crates/uc-persistence-postgres/: Cargo.toml
crates/uc-persistence-postgres/src/: lib.rs
crates/uc-persistence-sqlite/: Cargo.toml
crates/uc-persistence-sqlite/src/: lib.rs
crates/uc-sync-economics/: Cargo.toml
crates/uc-sync-economics/src/: lib.rs
docs/: yukh-adoption.md
gateway/: go.mod  http.yaml
governance/: github-manifest.json  github-structure.json  namespace-authorities.yaml  record-migration-registry.yaml  uc-bok-traceability.yaml
schemas/: architecture-record-envelope.schema.json
scripts/: check_architecture.py  check_coverage.py  check_rust_documentation.py  inventory_legacy_records.py  preflight_project_token.py  sync_github_governance.py  sync_github_structure.py  sync_project_fields.py  test_project_owner_resolution.py  validate_record_changes.py  validate_record_graph.py  validate_records.py  validate_repository.py  validate_session_accountability.py
tests/: test_record_validator.py
tools/: validate_capability_realization_manifests.py
(+124 files in other folders)
