[workspace]
members = [
    "crates/uc-domain",
    "crates/uc-application",
    "crates/uc-persistence-contract",
    "crates/uc-persistence-sqlite",
    "crates/uc-persistence-postgres",
    "crates/uc-sync",
    "crates/uc-sync-sqlite",
    "crates/uc-economics",
    "crates/uc-sync-economics",
    "crates/uc-operation",
    "crates/uc-runtime",
    "crates/uc-config",
    "crates/uc-adapters",
    "apps/uc-server",
    "apps/uc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
authors = ["UC Rust contributors"]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-test = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
