[package]
name = "uc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uc-adapters = { path = "../../crates/uc-adapters" }
uc-config = { path = "../../crates/uc-config" }
uc-operation = { path = "../../crates/uc-operation" }
uc-runtime = { path = "../../crates/uc-runtime" }
