[package]
name = "uc-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uc-operation = { path = "../uc-operation" }
uc-runtime = { path = "../uc-runtime" }

[dev-dependencies]
tracing-test.workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
