[package]
name = "uc-sync-economics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
uc-economics = { path = "../uc-economics" }
uc-sync = { path = "../uc-sync" }
uc-sync-sqlite = { path = "../uc-sync-sqlite" }

[lints]
workspace = true
